--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ QPushButton:hover {
     background-color: #2c2c2c;
 }
 
+QPushButton:checked {
+    background-color: #575757;
+}
+
 QLabel {
     font-size: 18px;
     padding: 10px;
