--- a/style.css
+++ b/style.css
@@ -1,98 +1,130 @@
+/* Main App Styling */
 
 QWidget {
-    background-color: #181818;
-    color: white;
-    font-family: var(--vscode-font-family, Consolas, 'Courier New', monospace);
+    background-color: rgb(43, 43, 43);
+    color: rgb(211, 211, 211);
+    font-family: "Ubuntu", sans-serif;
 }
 
-QMenu {
-    padding: 5px;
-    border: 1px solid #2c2c2c;
-    border-radius: 7px;
-}
-
-QAction {
-    padding: 5px;
-    border: 1px solid #2c2c2c;
-    border-radius: 7px;
-}
+/* Button Styling */
 
 QPushButton {
-    background-color: #181818;
-    padding: 10px;
-    font-weight: 900;
-    border-radius: 7px;
+    background: transparent;
+    border: none;
 }
 
 QPushButton:hover {
-    background-color: #2c2c2c;
+    border-radius: 2px;
+    background-color: rgb(54, 54, 54);
+    border: 1px solid rgb(20, 20, 20);
 }
 
-QPushButton:checked {
-    background-color: #575757;
+QPushButton:pressed {
+    background-color: rgb(54, 54, 54);
 }
 
-QLabel {
-    font-size: 18px;
-    padding: 10px;
-}
+/* Text Input Styling */
 
-/* List Styles */
-
-QListWidget {
-    background-color: #2c2c2c;
-    border: 1px solid #575757;
-    border-radius: 7px;
+QLineEdit {
+    background-color: rgb(64, 64, 64);
+    color: rgb(211, 211, 211);
+    border: 1px solid rgb(20, 20, 20);
     padding: 5px;
+    border-radius: 2px;
 }
 
-QListWidget::item {
-    padding: 5px;
-    margin-top: 5px;
-    margin-right: 5px;
-    background-color: #181818;
-    border-radius: 7px;
-    max-width: 300px;
+QLineEdit:focus {
+    border: 2px solid rgb(76, 124, 194); /* Blue border on focus */
 }
 
-QListWidget::item:selected {
-    background-color: #6bbcff;
-    border: none;
+/* File Browser Styling */
+
+QTreeWidget {
+    color: rgb(211, 211, 211);
+    background-color: rgb(64, 64, 64);
+    border: 1px solid rgb(20, 20, 20);
+    border-radius: 2px;
 }
 
-QListWidget::item:hover {
-    background-color: #6bbcff;
+QHeaderView::section {
+    background-color: rgb(43, 43, 43);
+    border-color: rgb(20, 20, 20);
+    padding-left: 10px;
+    height: 27px;
 }
 
-/* Scrollbar Styles */
+QTreeWidget::item {
+    padding: 4px;
+}
+
+/* Scrollbar styling */
+
+QTreeWidget::scrollbar:horizontal, QTreeWidget::scrollbar:vertical {
+    background-color: rgb(64, 64, 64);
+}
+
+QTreeWidget::scrollbar::handle {
+    background-color: rgb(64, 64, 64);
+    border-radius: 2px;
+}
+
+/* QMenu */
+
+QMenu {
+    background-color: rgb(64, 64, 64);
+    color: rgb(211, 211, 211);
+    border: 1px solid rgb(20, 20, 20);
+}
+
+QMenu::item {
+    padding: 8px 20px;
+    border-radius: 2px;
+}
+
+QMenu::item:selected {
+    
+    color: white;
+    background-color: rgb(76, 124, 194);
+}
+
+QMenu::item:hover {
+    background-color: rgb(64, 64, 64);
+}
+
+/* Scrollbars Styling */
 
 QScrollBar {
-    background: transparent;
-    width: 16px;
-    border: none;
+    background-color: rgb(64, 64, 64);
+    border: 1px solid rgb(20, 20, 20);
+    height: 10px;
 }
 
 QScrollBar::handle {
-    background: rgba(255, 255, 255, 100);
-    border: none;
-    border-radius: 3px;
+    background-color: rgb(64, 64, 64);
+    border-radius: 6px;
 }
 
-QScrollBar::handle:hover {
-    background-color: #6bbcff;
-}
-
-QScrollBar::sub-line,QScrollBar::add-line {
+QScrollBar::add-line:horizontal,
+QScrollBar::sub-line:horizontal,
+QScrollBar::add-line:vertical,
+QScrollBar::sub-line:vertical {
     background: none;
-    height: 0px;
-    width: 0px;
 }
 
-QScrollBar::up-arrow, QScrollBar::down-arrow {
+QScrollBar::up-arrow:vertical,
+QScrollBar::down-arrow:vertical,
+QScrollBar::left-arrow:horizontal,
+QScrollBar::right-arrow:horizontal {
     background: none;
-    height: 0px;
 }
 
-QScrollBar::add-page, QScrollBar::sub-page {
-    background: none;
+/* Tooltip Styling */
+
+QToolTip {
+    color: rgb(211, 211, 211);
+    background-color: rgb(54, 54, 54);
+    border: 1px solid rgb(20, 20, 20);
+    padding: 5px;
+    font-size: 12px;
+    border-radius: 2px;
 }
