--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Main App Styling */
 
 QWidget {
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(54, 54, 54);
     color: rgb(211, 211, 211);
     font-family: "Ubuntu", sans-serif;
 }
@@ -16,7 +16,7 @@ QPushButton {
 
 QPushButton:hover {
     border-radius: 2px;
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(64, 64, 64);
     border: 1px solid rgb(20, 20, 20);
 }
 
@@ -48,25 +48,22 @@ QTreeWidget {
 }
 
 QHeaderView::section {
-    background-color: rgb(43, 43, 43);
-    border-color: rgb(20, 20, 20);
+    font-weight: bold;
+    background-color: rgb(54, 54, 54);
+    border-bottom: 1px solid rgb(20, 20, 20);
+    border-top: none;
+    border-right: 1px solid rgb(20, 20, 20);
+    border-left: none;
     padding-left: 10px;
     height: 27px;
 }
 
+QHeaderView::section:last {
+    border-right: none;
+}
+
 QTreeWidget::item {
     padding: 4px;
-}
-
-/* Scrollbar styling */
-
-QTreeWidget::scrollbar:horizontal, QTreeWidget::scrollbar:vertical {
-    background-color: rgb(64, 64, 64);
-}
-
-QTreeWidget::scrollbar::handle {
-    background-color: rgb(64, 64, 64);
-    border-radius: 2px;
 }
 
 /* QMenu */
@@ -92,11 +89,11 @@ QMenu::item:hover {
     background-color: rgb(64, 64, 64);
 }
 
-/* Scrollbars Styling */
+/* Scrollbar Styling */
 
 
 QScrollBar {
-    background-color: rgb(64, 64, 64);
+    background-color: rgb(54, 54, 54);
     border-left: 1px solid rgb(20, 20, 20);
     border-right: none;
     border-top: none;
